WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158309
ScriptExecutionContext::Task constructor should take a NoncopyableFunction<void ()> as parameter
https://bugs.webkit.org/show_bug.cgi?id=158309
Summary
ScriptExecutionContext::Task constructor should take a NoncopyableFunction<vo...
Chris Dumez
Reported
2016-06-02 12:06:42 PDT
ScriptExecutionContext::Task constructor should take a NoncopyableFunction<void ()> as parameter instead of a std::function<void ()>.
Attachments
Patch
(8.58 KB, patch)
2016-06-02 12:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-02 12:41:30 PDT
Created
attachment 280349
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-02 12:43:05 PDT
Attachment 280349
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:53: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:54: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:55: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:62: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:63: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:64: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/dom/ScriptExecutionContext.h:143: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:109: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:118: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 9 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2016-06-02 13:33:54 PDT
Comment on
attachment 280349
[details]
Patch Clearing flags on attachment: 280349 Committed
r201614
: <
http://trac.webkit.org/changeset/201614
>
Chris Dumez
Comment 4
2016-06-02 13:33:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug