Source/WebCore/Modules/webaudio/AudioDestinationNode.h
@@ -30,6 +30,7 @@
 #include "AudioIOCallback.h"
 #include "AudioNode.h"
 #include "AudioSourceProvider.h"
+#include <wtf/NoncopyableFunction.h>
 
 namespace WebCore {
 
@@ -58,9 +59,9 @@ public:
     virtual void enableInput(const String& inputDeviceId) = 0;
 
     virtual void startRendering() = 0;
-    virtual void resume(std::function<void()>) { }
-    virtual void suspend(std::function<void()>) { }
-    virtual void close(std::function<void()>) { }
+    virtual void resume(NoncopyableFunction<void ()>&&) { }
+    virtual void suspend(NoncopyableFunction<void ()>&&) { }
+    virtual void close(NoncopyableFunction<void ()>&&) { }
 
     virtual bool isPlaying() { return false; }
     void isPlayingDidChange() override;
