Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h
@@ -50,9 +50,9 @@ public:
     // AudioDestinationNode
     void enableInput(const String& inputDeviceId) override;
     void startRendering() override;
-    void resume(std::function<void()>) override;
-    void suspend(std::function<void()>) override;
-    void close(std::function<void()>) override;
+    void resume(NoncopyableFunction<void ()>&&) override;
+    void suspend(NoncopyableFunction<void ()>&&) override;
+    void close(NoncopyableFunction<void ()>&&) override;
     unsigned long maxChannelCount() const override;
     bool isPlaying() override;
 
